# pii-protect

./: .coverage  .gitignore  README.md  pyproject.toml  run_tests.sh
.deepeval/: .deepeval_telemetry.txt
dataset/: kaggle_pii.csv  synthetic_pii.csv
docs/: BENCHMARKS.md
pii_protect_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/: report.html
scripts/: generate_datasets.py
tests/: __init__.py  _backend_config.py  conftest.py
tests/benchmarks/: test_performance.py
tests/dataset/: __init__.py  conftest.py  test_kaggle_pii.py  test_llm_pii_shield.py  test_synthetic_pii.py
tests/detection/: __init__.py  test_email_phone.py  test_financial_ids.py  test_mixed_pii.py
tests/edge_cases/: test_edge_cases.py
tests/integration/: conftest.py  test_context_manager.py  test_encryption_key.py  test_mask_dict.py  test_mask_unmask_flow.py  test_postgres_engine.py  test_redis_engine.py  test_scope_deduplication.py
tests/llm/: __init__.py  test_llm_batch_processing.py  test_llm_prompt_masking.py  test_llm_response_unmask.py
tests/llm/live/: conftest.py  test_deepeval_groq_metrics.py  test_groq_masking_safety.py
tests/unit/: test_crypto.py  test_error_handling.py  test_ner_engine.py  test_ner_privacy_filter.py  test_ner_spacy.py  test_redact.py  test_storage_filesystem.py  test_storage_memory.py  test_tokens.py  test_types.py
tests/unit/storage/: conftest.py  test_filesystem.py  test_memory.py  test_postgres.py  test_redis.py
