[project]
name = "pii-protect-tests"
version = "1.0.0"
description = "Comprehensive test suite for the pii-protect library"
requires-python = ">=3.10"

dependencies = [
    "pii-protect[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
    "pytest-benchmark>=4.0",
    "pytest-html>=4.1",
    "faker>=28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for end-to-end flows",
    "llm: LLM-specific masking/unmasking scenarios",
    "detection: PII entity detection tests",
    "edge_case: Edge case and boundary condition tests",
    "benchmark: Performance benchmark tests",
    "slow: Tests that take longer to run",
    "requires_spacy: Tests that require spaCy NER layer",
    "requires_privacy_filter: Tests that require privacy-filter transformer layer",
    "requires_redis: Tests that require a running Redis instance",
    "requires_postgres: Tests that require a running PostgreSQL instance",
    "dataset: Tests for PII datasets",
    "llm_integration: Integration tests for LangChain + Groq + DeepEval PII safety",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-x",
]
timeout = 30

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["pii_protect"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 70
